(feat) icons library

--- a/locale/pt_br.json
+++ b/locale/pt_br.json
@@ -44,5 +44,11 @@
     "profile": "Perfil",
     "settings": "Configurações",
     "logout": "Sair"
+  },
+  "button": {
+    "backstory": "Origem",
+    "save": "Salvar",
+    "cancel": "Cancelar",
+    "delete": "Excluir"
   }
 }
